assignment two finished

--- a/assignment_two.html
+++ b/assignment_two.html
@@ -7,11 +7,45 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<link rel="stylesheet" href="styles.css">
+<title>Assigment two</title>
 </head>
 <body>
-
+    <img src="images/download.jpg" alt="amazing_logo" id="logo">
+<div class="container col-3 align-center" id="sign_in">
+    <form>
+    <h3 class="sign_in m-10" id="sinlogo">Sign In</h3>
+    <label id="email">Email(phone or mobile accounts)</label>
+    <input type="email" placeholder="Enter Email" id="enter">
+    <div id="pass_div">
+    <label for="password" id="pass_label">Password</label>
+    <a href="#" class="link" id="forgot">Forgot Password</a>
+    <br>
+    <input type="password" placeholder="Enter your Password" id="password">
+    </div>
+    <div class="text-center">
+<button id="cont" class="btn text-dark btn-sm">Continue</button>
+</div>
+<div id="need_div">
+<a href="#" id="help" class="">Need Help?</a>
+</div>
+    </form>
+</div>
+<div id="new_div" class="container align-center text-center mt-4 col-3">
+    <h6 id="new_am"><span id="new_span">New to Amazing?</span></h6>
+    <button id="cre_btn" class="btn btn-sm">Create Your Amazing Account</button>
+</div>
+<footer>
+    <div id="foot_line" class="mt-5"></div>
+    <div class="container align-center text-center" id="fot_div">
+    <ul id="foot_ul">
+        <a href="#"><li>Conditions of use</li></a>
+        <a href="#"><li>Privacy Policy</li></a>
+        <a href="#"><li>Help</li></a>
+    </ul>
+    </div>
+    <p id="copy" class="text-center">&copy; 1997-2023, Amazing.com,inc or its Affiliates</p>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
